--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>TraceLabsTask</artifactId>
+    <artifactId>CryptoInsight</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>TraceLabsTask</name>
-    <description>TraceLabsTask</description>
+    <name>CryptoInsight</name>
+    <description>CryptoInsight</description>
     <properties>
         <java.version>17</java.version>
         <log4j2.version>2.18.0</log4j2.version>
